Added a memory performance window and first steps for filtering on location

--- a/infra-viewer/apps/website/src/app/shared/components/arcgis-map/arcgis-map.component.html
+++ b/infra-viewer/apps/website/src/app/shared/components/arcgis-map/arcgis-map.component.html
@@ -1,1 +1,7 @@
-<div id="map"></div>
+<div id="map">
+  <div id="performanceInfo">
+    <h4 id="title"></h4>
+    <table id="memory"></table>
+    <table id="count"></table>
+  </div>
+</div>
