Moved map to dedicated page

--- a/infra-viewer/apps/website/src/app/pages/welcome/welcome-page.component.html
+++ b/infra-viewer/apps/website/src/app/pages/welcome/welcome-page.component.html
@@ -1,1 +1,10 @@
-<app-arcgis-map></app-arcgis-map>
+<div class="uk-container">
+  <h1>Welkom bij de infra-viewer!</h1>
+  <p>Snelle navigatie:</p>
+
+  <div class="uk-button-group">
+    <button class="uk-button uk-button-primary" routerLink="./map">Map</button>
+    <button class="uk-button uk-button-primary" routerLink="./config">Config</button>
+  </div>
+</div>
+
