NX migration and started working on authorization for datasets & quering

--- a/infra-viewer/apps/website/src/app/pages/welcome/welcome-page.component.html
+++ b/infra-viewer/apps/website/src/app/pages/welcome/welcome-page.component.html
@@ -3,8 +3,9 @@
   <p>Snelle navigatie:</p>
 
   <div class="uk-button-group">
-    <button class="uk-button uk-button-primary" routerLink="./map">Map</button>
-    <button class="uk-button uk-button-primary" routerLink="./config">Config</button>
+    <button class="uk-button uk-button-primary" (click)="startLogin()">Login</button>
+    <button class="uk-button uk-button-default" routerLink="./map">Map</button>
+    <button class="uk-button uk-button-default" routerLink="./config">Config</button>
   </div>
 </div>
 
