small changes for stylingss

--- a/infra-viewer/apps/website/src/styles.scss
+++ b/infra-viewer/apps/website/src/styles.scss
@@ -1,6 +1,6 @@
 
 // 1. Your custom variables and variable overwrites.
-//@import "theme/accordion.scss";
+@import "theme/text.scss";
 //@import "theme/alert.scss";
 //@import "theme/align.scss";
 
