Upload config works

--- a/infra-viewer/apps/website/src/app/main/app.component.html
+++ b/infra-viewer/apps/website/src/app/main/app.component.html
@@ -1,1 +1,13 @@
+<nav class="uk-navbar-container">
+  <div class="uk-navbar-left">
+
+    <ul class="uk-navbar-nav">
+      <li class="uk-active"><a routerLink="/">Home</a></li>
+      <li><a routerLink="/map">Map</a></li>
+      <li><a routerLink="/config">Config</a></li>
+    </ul>
+
+  </div>
+</nav>
+
 <router-outlet></router-outlet>
