Visibility toggles in config page

--- a/infra-viewer/apps/website/src/app/pages/config-page/config-page.component.html
+++ b/infra-viewer/apps/website/src/app/pages/config-page/config-page.component.html
@@ -53,7 +53,11 @@
       <span class="uk-margin-small-left"
             [class.uk-text-warning]="!layer.title">{{layer.title || "Unknown Title"}}</span>
     </div>
-    <div>
+    <div class="uk-flex">
+      <button class="uk-button uk-button-default uk-button-small" (click)="toggleVisibility(layer, type)">
+        <span uk-icon="icon: check" *ngIf="layer.visible === undefined || layer.visible === true"></span>
+        <span uk-icon="icon: close" *ngIf="layer.visible === false"></span>
+      </button>
       <button class="uk-button uk-button-danger uk-button-small" (click)="deleteLayer(layer, type)">
         <span uk-icon="icon: trash"></span>
       </button>
