--- a/infra-viewer/apps/website/src/styles.scss
+++ b/infra-viewer/apps/website/src/styles.scss
@@ -1,7 +1,7 @@
 
 // 1. Your custom variables and variable overwrites.
 @import "theme/text.scss";
-//@import "theme/alert.scss";
+@import "theme/forms.scss";
 //@import "theme/align.scss";
 
 // 2. Import default variables and available mixins.
