If no image is shown the primary color is the background on welcome page

--- a/infra-viewer/apps/website/src/app/pages/welcome/welcome-page.component.html
+++ b/infra-viewer/apps/website/src/app/pages/welcome/welcome-page.component.html
@@ -4,7 +4,7 @@
     <p>Bekijk de openbare ruimte van Arnhem in 3D.</p>
     <button class="uk-button uk-button-primary" routerLink="/map">Beginnen!</button>
   </div>
-  <div class="image-container">
+  <div class="image-container uk-background-primary">
     <div class="uk-position-relative uk-visible-toggle uk-light uk-height-1-1"
          tabindex="-1"
          uk-slideshow="animation: push; autoplay: true; autoplay-interval: 5000;">
