--- a/infra-viewer/apps/website/src/app/pages/welcome/welcome-page.component.html
+++ b/infra-viewer/apps/website/src/app/pages/welcome/welcome-page.component.html
@@ -2,7 +2,7 @@
   <div class="text-container">
     <h1 class="uk-heading-large">Infraviewer</h1>
     <p>Bekijk de openbare ruimte van Arnhem in 3D.</p>
-    <button class="uk-button uk-button-primary" routerLink="/map">Beginnen!</button>
+    <button class="uk-button uk-button-primary" (click)="authService.login()">Beginnen!</button>
   </div>
   <div class="image-container uk-background-primary">
     <div class="uk-position-relative uk-visible-toggle uk-light uk-height-1-1"
