--- a/infra-viewer/apps/website/src/app/pages/map-page/map-page.component.html
+++ b/infra-viewer/apps/website/src/app/pages/map-page/map-page.component.html
@@ -13,11 +13,7 @@
       <li *ngFor="let result of results; let i = index">
         <div class="uk-card uk-card-default uk-card-body">
           <h3 class="uk-card-title">{{result.layer.title}}</h3>
-          <ul>
-            <li *ngFor="let feature of result.featureSet.features">
-              <pre>{{feature | json}}</pre>
-            </li>
-          </ul>
+          <app-feature-grid></app-feature-grid>
         </div>
       </li>
     </ul>
