--- a/infra-viewer/apps/website/src/styles.scss
+++ b/infra-viewer/apps/website/src/styles.scss
@@ -14,3 +14,5 @@ $global-primary-background: #02357c;
 
 // 4. Import UIkit
 @import "uikit/src/scss/uikit.scss";
+@import 'ag-grid-community/styles/ag-grid.css';
+@import 'ag-grid-community/styles/ag-theme-alpine.css';
