--- a/infra-viewer/apps/website/src/app/shared/components/feature-grid/feature-grid.component.html
+++ b/infra-viewer/apps/website/src/app/shared/components/feature-grid/feature-grid.component.html
@@ -1,14 +1,11 @@
-<!-- Button to clear selection -->
-<button (click)="clearSelection()">Clear Selection</button>
-<!-- AG Grid Angular Component -->
 <ag-grid-angular
-  style="width: 100%; height: 100%"
-  class="ag-theme-alpine"
+  class="ag-theme-alpine grid-container"
   [columnDefs]="columnDefs"
   [defaultColDef]="defaultColDef"
-  [rowData]="rowData$ | async"
+  [rowData]="rowData"
   [rowSelection]="'multiple'"
   [animateRows]="true"
+  [gridOptions]="gridOptions"
   (gridReady)="onGridReady($event)"
   (cellClicked)="onCellClicked($event)"
 ></ag-grid-angular>
