--- a/infra-viewer/apps/website/src/app/pages/map-page/map-page.component.html
+++ b/infra-viewer/apps/website/src/app/pages/map-page/map-page.component.html
@@ -1,4 +1,4 @@
-<div class="map-container">
+<div class="map-container uk-container uk-container-xlarge">
   <app-arcgis-map></app-arcgis-map>
 </div>
 
