Implemented search by grid

--- a/infra-viewer/apps/website/src/app/main/app.component.html
+++ b/infra-viewer/apps/website/src/app/main/app.component.html
@@ -2,9 +2,9 @@
   <div class="uk-navbar-left">
 
     <ul class="uk-navbar-nav">
-      <li class="uk-active"><a routerLink="/">Home</a></li>
-      <li><a routerLink="/map">Map</a></li>
-      <li><a routerLink="/config">Config</a></li>
+      <li routerLinkActive="uk-active"><a routerLink="/">Home</a></li>
+      <li routerLinkActive="uk-active"><a routerLink="/map">Map</a></li>
+      <li routerLinkActive="uk-active"><a routerLink="/config">Config</a></li>
     </ul>
 
   </div>
