--- a/infra-viewer/apps/website/src/app/shared/components/feature-grid/feature-grid.component.html
+++ b/infra-viewer/apps/website/src/app/shared/components/feature-grid/feature-grid.component.html
@@ -7,5 +7,5 @@
   [animateRows]="true"
   [gridOptions]="gridOptions"
   (gridReady)="onGridReady($event)"
-  (cellClicked)="onCellClicked($event)"
+  (filterChanged)="onFilterChanged($event)"
 ></ag-grid-angular>
