--- a/infra-viewer/apps/website/src/app/pages/welcome/welcome-page.component.html
+++ b/infra-viewer/apps/website/src/app/pages/welcome/welcome-page.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="text-container">
-    <h1 class="uk-heading-large">Infraviewer</h1>
+    <h1 class="uk-heading-large" data-aos="fade-zoom-in">Infraviewer</h1>
     <p>Bekijk de openbare ruimte van Arnhem in 3D.</p>
     <button class="uk-button uk-button-primary" (click)="authService.login()">Beginnen!</button>
   </div>
