--- a/infra-viewer/apps/website/src/app/main/app.component.html
+++ b/infra-viewer/apps/website/src/app/main/app.component.html
@@ -5,6 +5,7 @@
       <li routerLinkActive="uk-active"><a routerLink="/">Home</a></li>
       <li routerLinkActive="uk-active"><a routerLink="/map">Map</a></li>
       <li routerLinkActive="uk-active"><a routerLink="/config">Config</a></li>
+      <li routerLinkActive="uk-active"><a routerLink="/hub">Content Hub</a></li>
     </ul>
 
   </div>
