Removed the old way of filtering on location and replaced it with the sketch query now. Almost works entirely now
There are some issues still when switching layers on and off, the tables don't update

--- a/infra-viewer/apps/website/src/app/pages/map-page/map-page.component.html
+++ b/infra-viewer/apps/website/src/app/pages/map-page/map-page.component.html
@@ -1,5 +1,5 @@
 <div class="map-container uk-container uk-container-xlarge">
-  <app-arcgis-map></app-arcgis-map>
+  <app-arcgis-map (query)="onQuery($event)"></app-arcgis-map>
 </div>
 
 <div *ngIf="results">
