--- a/infra-viewer/apps/website/src/app/shared/components/arcgis-map/arcgis-map.component.html
+++ b/infra-viewer/apps/website/src/app/shared/components/arcgis-map/arcgis-map.component.html
@@ -1,2 +1,2 @@
 <div id="map"></div>
-<app-sketch-query-widget></app-sketch-query-widget>
+<app-sketch-query-widget (query)="this.query.emit($event)"></app-sketch-query-widget>
