Integration with tables work one way, from map to table
It still needs support for filtering in the table and representing that in the filter

--- a/infra-viewer/apps/website/src/app/pages/map-page/map-page.component.html
+++ b/infra-viewer/apps/website/src/app/pages/map-page/map-page.component.html
@@ -2,7 +2,7 @@
   <app-arcgis-map (query)="onQuery($event)"></app-arcgis-map>
 </div>
 
-<div *ngIf="results">
+<div *ngIf="results.length > 0">
   <div class="uk-card uk-card-default uk-card-body">
     <ul uk-tab>
       <li *ngFor="let result of results | slice:0:4">
