--- a/infra-viewer/apps/website/src/app/pages/map-page/map-page.component.html
+++ b/infra-viewer/apps/website/src/app/pages/map-page/map-page.component.html
@@ -30,6 +30,7 @@
 <ng-template #layerResult let-result="result">
   <div data-aos="fade-up" class="uk-card uk-card-default uk-card-body">
     <h3 class="uk-card-title">{{result.layer.title}}</h3>
-    <app-feature-grid (filterChanged)="onGridFilterChange($event, result.layer)" [input]="result" [map]="map"></app-feature-grid>
+    <app-feature-grid (filterChanged)="onGridFilterChange($event, result.layer)" [input]="result"
+                      [map]="map"></app-feature-grid>
   </div>
 </ng-template>
