--- a/infra-viewer/apps/website/src/app/pages/hub-page/hub-page.component.html
+++ b/infra-viewer/apps/website/src/app/pages/hub-page/hub-page.component.html
@@ -1,28 +1,52 @@
-<div class="uk-container" *ngIf="hubItems">
-  <!--Create rows with four columns iterating over the hubitems, showing it's information-->
-  <div class="uk-grid-match" uk-grid>
-    <div class="uk-width-1-3 uk-card uk-card-default" *ngFor="let hubItem of hubItems">
-      <div class="uk-card-media-top">
-        <a target="_blank" [href]="createUrlToPortalItem(hubItem)">
-          <img [src]="createImageUrl(hubItem)" alt="Thumbnail" class="uk-width-1-1">
-        </a>
+<div class="uk-container uk-container-xlarge" uk-grid *ngIf="hubItems">
+  <!--  Create a column with a search bar and options to filter on-->
+  <div class="uk-width-1-4 uk-height-1-1 uk-background-muted">
+    <div class="uk-card uk-card-default uk-card-body uk-position-z-index"
+         uk-sticky="animation: uk-animation-slide-top">
+      <h3 class="uk-card-title">Search</h3>
+      <div class="uk-margin">
+        <div class="uk-inline">
+          <span class="uk-form-icon" uk-icon="icon: search"></span>
+          <input class="uk-input" type="text" placeholder="Search" [(ngModel)]="filter.search">
+        </div>
       </div>
-      <div class="uk-card-body uk-flex uk-flex-column uk-flex-between uk-align-left">
-        <div>
+      <div class="uk-margin">
+        <div class="uk-inline">
+          <span class="uk-form-icon" uk-icon="icon: tag"></span>
+          <input class="uk-input" type="text" placeholder="Tags" [(ngModel)]="filter.tags">
+        </div>
+      </div>
+      <div class="uk-margin">
+        <div class="uk-inline">
+          <span class="uk-form-icon" uk-icon="icon: user"></span>
+          <input class="uk-input" type="text" placeholder="Author" [(ngModel)]="filter.author">
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--Create rows with four columns iterating over the hubitems, showing it's information-->
+  <div class="uk-width-3-4 uk-grid-match uk-grid-small" uk-grid>
+    <div class="uk-width-1-4" *ngFor="let hubItem of hubItems">
+      <div class="uk-card uk-card-default uk-card-hover uk-flex uk-flex-column uk-flex-between">
+        <div class="uk-card-media-top">
+          <a target="_blank" [href]="createUrlToPortalItem(hubItem)">
+            <img [src]="createImageUrl(hubItem)" alt="Thumbnail" class="uk-width-1-1">
+          </a>
+        </div>
+        <div class="uk-card-header">
           <h3 class="uk-card-title">{{transformTitle(hubItem)}}</h3>
           <a class="uk-link" target="_blank" [href]="createUrlToPortalItem(hubItem)">Go to portal</a>
         </div>
-        <!--        Toolbar-->
-        <div class="uk-flex uk-flex-between">
-          <div>
-            <span class="uk-badge">{{hubItem.type}}</span>
-          </div>
-          <div>
+        <div class="uk-card-body">
+          <div class="uk-card-badge uk-label no-background">
+            <span class="uk-badge uk-background-primary">{{hubItem.type}}</span>
             <ng-container *ngIf="layerAlreadyInConfiguration(hubItem); else notInConfig">
-              <span class="uk-badge uk-background-danger" (click)="removeLayerFromConfiguration(hubItem)">Remove</span>
+                <span class="uk-badge uk-background-danger"
+                      (click)="removeLayerFromConfiguration(hubItem)">Remove</span>
             </ng-container>
             <ng-template #notInConfig>
-              <span class="uk-badge uk-background-success" (click)="addLayerToConfiguration(hubItem)">Add</span>
+            <span class="uk-badge uk-background-success"
+                  (click)="addLayerToConfiguration(hubItem)">Add</span>
             </ng-template>
           </div>
         </div>
